  of such references; this is used in the context of the implementation of the okToDelete() function in master tables;
  because of this all BeanMasterTableViewBase source files need to be regenerated
- by default error message container IDs are now of the form: error_message_<Bean name>_<Bean ID>; this guarantee the
  uniqueness of these ids when creating complex interfaces; existing code might need to be changed if it relies
  on default generation of error message container

All generated code from version 2.2 must be regenerated. In editable files, overloaded functions related to file
handling, data validation and naming and ordering beans should be checked.

NEW FEATURES:
- add two separate annotations to distinguish generated files that can be edited from those that should not be (replace
  use of javax.annotation.processing.Generated)
- add support for ApplicationParameters singleton, to centralize application parameters and allow data libraries
  built with Beanmaker to be used in more than one project/deliverable.
- add support for subcontainers in forms, so the the form's fields can be placed in a subcontainer and the form's
  buttons in another (this to help take advantage of CSS frameworks that offer facilites to separate body and
  footer in modales)
- introduce Bootstrap 5 HtmlFormHelper
- introduce direct support in BeanMasterTableViewBase for links to a detail view: removes the need for repetitive
  overloading of the getEditCell() function

BUG FIXES:
- bug fix for: drag and drop doesn't work for tables with an item_order linked to an other field
- bug fix for: cannot create more than one instance of Beanmaker2 javascript object on the same page
- bug fix for: null String saved as empty text instead of a SQL NULL value

MINOR CHANGES:
- code cleanup in master tables
- improve some exception messages
- various small improvements and fixes